--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">CollApp</string>
+    <string name="title_activity_new_project">MainActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_status">Stats</string>
+    <string name="title_fav">Favs</string>
+    <string name="title_prof">User</string>
+
 </resources>
